--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="keywords" content="magic eight ball, future, fun, game, guessing game">
     <meta name="description" content="A look into the future!">
-    link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.Cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
@@ -14,13 +14,58 @@
 </head>
 <body>
     <header>
-
+        <!--
+        Navigation Section
+        Code snippet taken and modified from Bootstrap 5
+        -->
+        <nav class="navbar bg-body-tertiary" id="nav-bar-surround">
+            <div class="container-fluid"  id="nav-bar-background">
+              <a id="uppercase" class="navbar-brand header-title" href="#">Magic Eight Balls of Fun!</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+                <span><i class="fa fa-bars" aria-hidden="true"></i></span>
+              </button>
+              <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+                <div class="offcanvas-header" id="menu-title">
+                  <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menu</h5>
+                  <button type="button" class="bg-transparent border-0" data-bs-dismiss="offcanvas" aria-label="Close">
+                    <i id="close-button-icon" class="fa fa-times" aria-hidden="true"></i>
+                  </button>
+                </div>
+                <div class="offcanvas-body" id="menu-background">
+                  <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="eight-ball.html">Magic Eight Ball</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="funny-ball.html">Funny Ball</a>
+                      </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </nav>
     </header>
     <main>
 
     </main>
     <footer>
-        
+        <div class="container">
+            <div class="row align-items-end">
+                <div class="col github-footer">
+                    <ul class="github-footer-link">
+                        <li>
+                          <a target="_blank"  href="https://github.com/DebbiePotts87">
+                            <i class="fa fa-github" aria-hidden="true"></i>
+                            <span class="sr-only">Github link</span>
+                          </a>
+                        </li>
+                      </ul>
+                </div>
+            </div>
+        </div>
     </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 <script src="assets/js/script.js"></script>
