added structure,content and style to index.html

--- a/index.html
+++ b/index.html
@@ -49,7 +49,27 @@
           </nav>
     </header>
     <main>
-
+        <div class="container" id="website-into-section">
+            <div class="row align-items-center">
+                <div class="col" id="welcome-section-text">
+                    <h1>Welcome!</h1>
+                    <h2>It's time to look into your future.</h2>
+                    <p>
+                        Have a look around and decide what you want the answer to.
+                        <br>
+                        Think carefully before you ask!
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="container" id="button-navigation-section">
+            <div class="row g-0 align-content-center justify-content-center">
+                <div class="col-sm-4 col-md-2" id="submit-page-buttons">
+                    <a class="btn" href="eight-ball.html" role="button">Magic Eight Ball</a>
+                    <a class="btn" href="funny-ball.html" role="button">Funny Ball</a>
+                </div>
+            </div>
+        </div>
     </main>
     <footer>
         <div class="container">
