--- a/eight-ball.html
+++ b/eight-ball.html
@@ -49,7 +49,30 @@
           </nav>
     </header>
     <main>
-
+      <div class="container">
+        <div class="row g-0 align-content-center justify-content-center">
+          <div class="col-sm-4 col-md-6 col-lg-4 eight-ball-image">
+            <img src="assets/images/magic-eight-ball.png" class="img-fluid" alt="Picture of a magic eight ball">
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row g-0 align-content-center justify-content-center">
+          <div class="col-sm-4 col-md-6 col-lg-4 eight-ball-image">
+            <div class="input-group">
+              <input id="eight-ball-input" type="text" class="form-control" placeholder="What do you want to know?" aria-label="Users question" aria-describedby="button-addon2">
+              <button id="eight-ball-submit" class="btn btn-outline-secondary eight-ball-submit-button" type="button">Tell me now!
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row g-0 align-content-center justify-content-center">
+          <div class="col-sm-4 col-md-6 col-lg-4">
+            <p class="eight-ball-answer"></p>
+          </div>
+        </div>
+      </div>
     </main>
     <footer>
         <div class="container">
