--- a/funny-ball.html
+++ b/funny-ball.html
@@ -91,6 +91,6 @@
         </div>
     </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-<script src="assets/js/eight-ball.js"></script>
+<script src="assets/js/funny-ball.js"></script>
 </body>
 </html>
