Added content to readme.md

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </header>
     <main>
         <div class="container" id="website-into-section">
-            <div class="row align-items-center">
+            <div class="row g-0 align-items-center">
                 <div class="col" id="welcome-section-text">
                     <h1>Welcome!</h1>
                     <h2>It's time to look into your future.</h2>
@@ -73,7 +73,7 @@
     </main>
     <footer>
         <div class="container">
-            <div class="row align-items-end">
+            <div class="row g-0 align-items-end">
                 <div class="col github-footer">
                     <ul class="github-footer-link">
                         <li>
