--- a/funny-ball.html
+++ b/funny-ball.html
@@ -76,7 +76,7 @@
     </main>
     <footer>
         <div class="container">
-            <div class="row align-items-end">
+            <div class="row g-0 align-items-end">
                 <div class="col github-footer">
                     <ul class="github-footer-link">
                         <li>
