added media queries

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         -->
         <nav class="navbar bg-body-tertiary" id="nav-bar-surround">
             <div class="container-fluid"  id="nav-bar-background">
-              <a id="uppercase" class="navbar-brand header-title" href="#">Magic Eight Balls of Fun!</a>
+              <a id="uppercase" class="navbar-brand header-title page-title" href="#">Magic Eight Balls of Fun!</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
-                <span><i class="fa fa-bars" aria-hidden="true"></i></span>
+                <span><i id="menu-button" class="fa fa-bars" aria-hidden="true"></i></span>
               </button>
               <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
                 <div class="offcanvas-header" id="menu-title">
@@ -50,8 +50,8 @@
     </header>
     <main>
         <div class="container" id="website-into-section">
-            <div class="row g-0 align-items-center">
-                <div class="col" id="welcome-section-text">
+            <div class="row g-0 align-items-center justify-content-center">
+                <div class="col-sm-4 col-md-8 lg-8" id="welcome-section-text">
                     <h1>Welcome!</h1>
                     <h2>It's time to look into your future.</h2>
                     <p>
@@ -64,7 +64,7 @@
         </div>
         <div class="container" id="button-navigation-section">
             <div class="row g-0 align-content-center justify-content-center">
-                <div class="col-sm-4 col-md-2" id="submit-page-buttons">
+                <div class="col-sm-4 col-md-6" id="submit-page-buttons">
                     <a class="btn" href="eight-ball.html" role="button">Magic Eight Ball</a>
                     <a class="btn" href="funny-ball.html" role="button">Funny Ball</a>
                 </div>
@@ -78,7 +78,7 @@
                     <ul class="github-footer-link">
                         <li>
                           <a target="_blank"  href="https://github.com/DebbiePotts87">
-                            <i class="fa fa-github" aria-hidden="true"></i>
+                            <i id="github-footer-icon" class="fa fa-github" aria-hidden="true"></i>
                             <span class="sr-only">Github link</span>
                           </a>
                         </li>
