--- a/funny-ball.html
+++ b/funny-ball.html
@@ -58,7 +58,7 @@
       </div>
       <div class="container">
         <div class="row g-0 align-content-center justify-content-center">
-          <div class="col-sm-4 col-md-6 col-lg-4 eight-ball-image">
+          <div class="col-sm-4 col-md-4 eight-ball-image">
             <div class="input-group">
               <input id="funny-ball-input" type="text" class="form-control" placeholder="What do you want to know?" aria-label="Users question" aria-describedby="button-addon2">
               <button id="funny-ball-submit"class="btn btn-outline-secondary funny-ball-submit-button" type="button">Tell me now!
